--- a/Exc12.html
+++ b/Exc12.html
@@ -5,7 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Exercicio 12</title>
     </head>
-    <body>
-
+    <body style="background-color: black; color: white;">
+     <h1><ins>CSS inline:</ins></h1>
+    <p>A primeira é o CSS inline, aplicado diretamente no elemento HTML por meio do atributo style. <br>
+    Sua principal vantagem é a agilidade, pois permite mudanças rápidas e pontuais sem a necessidade de alterar <br>
+    outros arquivos. No entanto, ele dificulta a manutenção, polui o HTML e não possibilita o reaproveitamento <br>
+    de código. O motivo mais importante para utilizá-lo é justamente a <mark style="background-color: aquamarine;">agilidade máxima</mark> <br>
+    para modificar um elemento específico.</p>
+    <h1><ins>CSS interno:</ins></h1>
+    <p>A segunda é o CSS interno, no qual as regras ficam dentro de uma tag style no cabeçalho head da <br>
+    página. Esse formato centraliza os estilos de cada página em um único local, sendo útil para ajustes e testes <br>
+    rápidos em páginas isoladas. A desvantagem é que não permite o compartilhamento de estilos entre <br>
+    diferentes páginas e pode se tornar confuso em projetos maiores. Seu motivo mais importante é o <mark style="background-color: orange;">controle centralizado</mark> <br>
+    de todos os estilos da página.</p>
+    <h1><ins>CSS externo:</ins></h1>
+    <p>A terceira forma é o CSS externo, que utiliza um arquivo separado normalmente com extensão .css <br>
+    vinculado ao HTML por meio da tag link. Ele mantém o HTML limpo, facilita a manutenção, possibilita o <br>
+    reaproveitamento de código e melhora o desempenho com o uso de cache. A principal desvantagem é <br>
+    exigir mais organização e estrutura inicial, além de gerar uma requisição a mais ao carregar. O motivo mais <br>
+    importante para usá-lo é a <mark style="background-color: purple;"> manutenção fácil e consistente</mark> <br>
+    em todo o site, permitindo que várias páginas compartilhem o mesmo estilo.</p>
     </body>
 </html>
