--- a/Exc1.html
+++ b/Exc1.html
@@ -1,24 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lista - Exercicio 1.</title>
-    </head>
-    <body>
-        <h1>Italia</h1>
-        <hr>
-        <p>Um país que eu gostaria muito de conhecer é a Itália. Sempre achei a cultura italiana muito bonita e cheia de<br>
-        história. Lugares como Roma, Veneza e Florença parecem incríveis, com construções antigas, museus e <br>
-        paisagens lindas. Também sou muito fã da comida italiana, como pizza, massas e sorvetes, que são <br>
-        conhecidos no mundo inteiro. <br>
-        Tenho vontade de estudar na Itália, especialmente algo ligado à arte ou arquitetura. Lá existem <br>
-        universidades famosas e eu acho que seria legal aprender em um lugar com tanta história e inspiração. Além <br>
-        de estudar, também penso em trabalhar por lá, quem sabe em algo relacionado a design, turismo ou cultura. <br>
-        <br>
-        Outro ponto que me atrai é o estilo de vida dos italianos. Eles valorizam muito a família, a comida e o tempo <br>
-        de qualidade com as pessoas. Acho que viver na Itália seria uma experiência única. Aprender a língua, <br>
-        conhecer pessoas novas e explorar o país seria um sonho realizado. Por tudo isso, a Itália é um lugar onde <br>
-        eu gostaria de estudar, trabalhar e viver por um tempo. <br></p>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Exercicio</title>
+    <style>
+    #cabeçalho{
+        height: 600px;
+        width: 96%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #subCabeçalho{
+        height: 250px;
+        width: 96%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 310px;
+        margin-left: 35px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #main{
+         height: 2500px;
+        width: 96%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 40px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #section{
+         height: 2250px;
+        width: 60%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 80px;
+        margin-left: 35px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #article{
+         height: 4000px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #aside{
+         height: 4000px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #article2{
+         height: 4000px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #aside2{
+         height: 4000px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    #footer{
+         height: 4000px;
+        width: 80%;
+        background-color: rgb(255, 255, 255);
+        margin-top: 400px;
+        margin-left: 20px;
+        border: 10px solid;
+        border-color: rgb(0, 0, 0);
+    }
+    </style>
+</head>
+<body>
+    <header id="cabeçalho">
+        <nav id="subCabeçalho">
+        </nav>
+    </header>
+    <main id="main">
+        <section id="section">
+            <article id="article">
+            </article>
+        </section>
+        <aside id="aside">
+        </aside>
+        <article id="article2">
+            <aside id="aside2">
+            </aside>
+        </article>
+    </main>
+    <footer id="footer">
+    </footer>
+</body>
 </html>
