--- a/Exc1.html
+++ b/Exc1.html
@@ -3,109 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercicio</title>
-    <style>
-    #cabeçalho{
-        height: 600px;
-        width: 96%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #subCabeçalho{
-        height: 250px;
-        width: 96%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 310px;
-        margin-left: 35px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #main{
-         height: 2500px;
-        width: 96%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 40px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #section{
-         height: 2250px;
-        width: 60%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 80px;
-        margin-left: 35px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #article{
-         height: 4000px;
-        width: 80%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #aside{
-         height: 4000px;
-        width: 80%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #article2{
-         height: 4000px;
-        width: 80%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #aside2{
-         height: 4000px;
-        width: 80%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    #footer{
-         height: 4000px;
-        width: 80%;
-        background-color: rgb(255, 255, 255);
-        margin-top: 400px;
-        margin-left: 20px;
-        border: 10px solid;
-        border-color: rgb(0, 0, 0);
-    }
-    </style>
+    <title>Exercicios</title>
 </head>
 <body>
-    <header id="cabeçalho">
-        <nav id="subCabeçalho">
-        </nav>
-    </header>
-    <main id="main">
-        <section id="section">
-            <article id="article">
-            </article>
-        </section>
-        <aside id="aside">
-        </aside>
-        <article id="article2">
-            <aside id="aside2">
-            </aside>
-        </article>
-    </main>
-    <footer id="footer">
-    </footer>
+    
 </body>
 </html>
